[gd_scene load_steps=13 format=3 uid="uid://wlwpi5y4b8eb"]

[ext_resource type="Script" path="res://player.gd" id="1_c3sux"]
[ext_resource type="SpriteFrames" uid="uid://h12gvruhx67j" path="res://player_gloves.tres" id="3_b4afw"]
[ext_resource type="Script" path="res://display_circle.gd" id="4_ap31q"]
[ext_resource type="Texture2D" uid="uid://cpxykrmmr67do" path="res://sprites/shield.png" id="5_hdpwx"]
[ext_resource type="Shader" path="res://player.gdshader" id="5_jfvbe"]
[ext_resource type="Script" path="res://shield_sprite.gd" id="6_pjl0a"]
[ext_resource type="AudioStream" uid="uid://b5uic2m3h33rt" path="res://sounds/dash.wav" id="7_3bjd6"]
[ext_resource type="AudioStream" uid="uid://bvyd8g6xu1b0f" path="res://sounds/hitHurt_player.wav" id="8_af2ie"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pq6xe"]
shader = ExtResource("5_jfvbe")
shader_parameter/white_tint = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_trudo"]
radius = 4.80667
height = 15.6667

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m4i7b"]
radius = 0.65
height = 1.35

[sub_resource type="CircleShape2D" id="CircleShape2D_7n845"]
radius = 20.0

[node name="player" type="CharacterBody2D"]
scale = Vector2(6, 6)
collision_layer = 17
collision_mask = 18
script = ExtResource("1_c3sux")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_pq6xe")
sprite_frames = ExtResource("3_b4afw")
animation = &"run_down"

[node name="shield_sprite" type="Sprite2D" parent="."]
texture = ExtResource("5_hdpwx")
script = ExtResource("6_pjl0a")

[node name="Timer" type="Timer" parent="shield_sprite"]
wait_time = 10.0

[node name="player_hurtbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.36)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_trudo")

[node name="player_glove_receipt" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="left_hand" type="CollisionShape2D" parent="player_glove_receipt"]
position = Vector2(-2.052, 3.833)
shape = SubResource("CapsuleShape2D_m4i7b")
debug_color = Color(0.721569, 0, 0.286275, 0.419608)

[node name="right_hand" type="CollisionShape2D" parent="player_glove_receipt"]
position = Vector2(1.895, 3.833)
shape = SubResource("CapsuleShape2D_m4i7b")
debug_color = Color(0.721569, 0, 0.286275, 0.419608)

[node name="catch_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="catch_area"]
shape = SubResource("CircleShape2D_7n845")

[node name="display_circle" type="Node2D" parent="catch_area"]
script = ExtResource("4_ap31q")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="dash_reset" type="Timer" parent="."]
wait_time = 3.0

[node name="dash_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_3bjd6")

[node name="hurt_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_af2ie")

[connection signal="timeout" from="shield_sprite/Timer" to="shield_sprite" method="_on_timer_timeout"]
[connection signal="area_entered" from="player_glove_receipt" to="." method="_on_player_glove_receipt_area_entered"]
[connection signal="area_entered" from="catch_area" to="." method="_on_catch_glove_entered"]
[connection signal="area_exited" from="catch_area" to="." method="_on_catch_glove_exited"]
[connection signal="timeout" from="dash_reset" to="." method="_on_dash_reset_timeout"]
